Razor view files created  the CRUD pages . Updated the README accordingly

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CelestialCandleContext": "Server=(localdb)\\mssqllocaldb;Database=CelestialCandleContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
+
